fix header on mobile

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 }
 header{
     height: fit-content;
-    
+    width: max-content;
     min-height: 250px;  /* Ensure a minimum height */
     background-color: #333;
 }
